[tool.poetry]
name = "check-handler"
version = "0.1.0"
description = ""
authors = ["artslob <artslob@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
